EDSC-4421 Fixing shapefile 'x' button. Aligning subscription action buttons

--- a/static/src/js/components/SubscriptionsList/SubscriptionsListTable.scss
+++ b/static/src/js/components/SubscriptionsList/SubscriptionsListTable.scss
@@ -13,6 +13,11 @@
 
   &__actions {
     text-align: center;
+    div {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   &__name,
